--- a/managerHome.html
+++ b/managerHome.html
@@ -48,10 +48,10 @@
     <script src="./script/amazon-cognito-identity.min.js"></script>
     <script>
     //=============== AWS IDs ===============
-    var userPoolId = 'us-east-1_eQRJ21hXq';
-    var clientId = '6ir9bmjr770030sajnece2bste';
+    var userPoolId = 'Your userPoolId';
+    var clientId = 'YourClienID';
     var region = 'us-east-1';
-    var identityPoolId = 'us-east-1:f97072ec-26c5-4a33-847f-2a371eecf54a';
+    var identityPoolId = 'Your identity pool id';
     //=============== AWS IDs ===============
     
     var cognitoUser;
