--- a/employeeHome.html
+++ b/employeeHome.html
@@ -215,10 +215,10 @@ document.getElementById("rt").value = result.resTak;
     <script src="./script/amazon-cognito-identity.min.js"></script>
     <script>
     //=============== AWS IDs ===============
-    var userPoolId = 'us-east-1_eQRJ21hXq';
-    var clientId = '6ir9bmjr770030sajnece2bste';
+    var userPoolId = 'your poolId';
+    var clientId = 'your clientId';
     var region = 'us-east-1';
-    var identityPoolId = 'us-east-1:f97072ec-26c5-4a33-847f-2a371eecf54a';
+    var identityPoolId = 'your identity poolId';
     //=============== AWS IDs ===============
     
     var cognitoUser;
